--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.23.0",
     "clipboard": "^2.0.8",
+    "codemirror": "^5.63.3",
     "element-ui": "^2.15.6",
     "highlight.js": "^11.3.1",
     "html2canvas": "^1.3.2",
     "insert-css": "^2.0.0",
     "jquery": "^3.6.0",
     "js-md5": "^0.7.3",
+    "jsencrypt": "^3.2.1",
     "jspdf": "^2.4.0",
+    "le-markdown-editor": "^1.1.4",
     "less-loader": "^5.0.0",
     "marked": "^3.0.7",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.3.0",
     "style-loader": "^3.3.0",
     "stylus-loader": "^6.2.0",
     "v-viewer": "^1.6.4",
+    "vditor": "^3.8.7",
     "view-design": "^4.7.0-beta.11",
     "viewerjs": "^1.10.1",
     "vue": "^2.5.2",
