--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsencrypt": "^3.2.1",
     "jspdf": "^2.4.0",
     "le-markdown-editor": "^1.1.4",
+    "prettier": "^2.2.1",
     "less-loader": "^5.0.0",
     "marked": "^3.0.7",
     "node-sass": "^4.14.1",
