--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clipboard": "^2.0.8",
     "codemirror": "^5.63.3",
     "element-ui": "^2.15.6",
+    "encryptlong": "^3.1.4",
     "highlight.js": "^11.3.1",
     "html2canvas": "^1.3.2",
     "insert-css": "^2.0.0",
@@ -27,10 +28,23 @@
     "jsencrypt": "^3.2.1",
     "jspdf": "^2.4.0",
     "le-markdown-editor": "^1.1.4",
-    "prettier": "^2.2.1",
     "less-loader": "^5.0.0",
+    "markdown-it": "^12.2.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-toc": "^1.1.0",
     "marked": "^3.0.7",
     "node-sass": "^4.14.1",
+    "prettier": "^2.2.1",
     "sass-loader": "^7.3.0",
     "style-loader": "^3.3.0",
     "stylus-loader": "^6.2.0",
@@ -41,6 +55,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-uuid": "^2.0.2",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
