--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@antv/g6": "^4.3.11",
     "@antv/x6": "^1.26.2",
     "@antv/x6-vue-shape": "^1.2.10",
+    "@vue/composition-api": "^1.3.3",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.23.0",
     "clipboard": "^2.0.8",
@@ -27,6 +28,7 @@
     "js-md5": "^0.7.3",
     "jsencrypt": "^3.2.1",
     "jspdf": "^2.4.0",
+    "juice": "^8.0.0",
     "le-markdown-editor": "^1.1.4",
     "less-loader": "^5.0.0",
     "markdown-it": "^12.2.0",
